--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "benchmark": "babel-node benchmark",
     "benchmark:watch": "nodemon $2 --exec babel-node benchmark",
     "lint": "eslint src test benchmark",
+    "lint:fix": "eslint --fix src test benchmark",
     "test": "npm run test:coverage",
     "test:base": "mocha -c -S -R spec 'tests' --compilers js:babel-register --check-leaks",
     "test:coverage": "cross-env NODE_ENV=test nyc npm run test:base",
@@ -26,9 +27,9 @@
     "scan:updates": "ncu",
     "setenv:dev": "npm config set production false",
     "setenv:prod": "npm config set production true",
-    "prerelease": "npm run setenv:prod && npm run clean && npm run build:dist && npm run lint && npm run scan:security && npm run test:ci:coverage && npm run report-coverage",
-    "release": "standard-version",
-    "postrelease": "git push --follow-tags origin master && npm publish && greenkeeper-postpublish && npm run setenv:dev"
+    "x-prerelease": "npm run setenv:prod && npm run clean && npm run build:dist && npm run lint && npm run scan:security && npm run test:ci:coverage && npm run report-coverage",
+    "x-release": "standard-version",
+    "x-postrelease": "git push --follow-tags origin master && npm publish && greenkeeper-postpublish && npm run setenv:dev"
   },
   "repository": {
     "type": "git",
@@ -41,46 +42,45 @@
   },
   "homepage": "https://github.com/DeviantJS/es7-babel-starter#readme",
   "devDependencies": {
-    "babel-cli": "6.22.2",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^7.2.3",
     "babel-node-debug": "2.0.0",
-    "babel-polyfill": "6.22.0",
-    "babel-preset-babili": "0.0.10",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-airbnb": "^2.4.0",
+    "babel-preset-babili": "^0.1.4",
     "babel-preset-es2015-node6": "0.4.0",
-    "babel-preset-stage-0": "6.22.0",
-    "babel-register": "6.22.0",
-    "babili": "0.0.10",
-    "benchmark": "2.1.3",
-    "chai": "3.5.0",
-    "codecov": " 1.0.1",
-    "commitizen": " 2.9.5",
-    "conventional-changelog": " 1.1.0",
-    "cross-env": "3.1.4",
-    "cz-conventional-changelog": "1.2.0",
-    "eslint": "3.14.0",
-    "eslint-config-standard": "6.2.1",
-    "eslint-plugin-promise": "3.4.0",
-    "eslint-plugin-standard": "2.0.1",
-    "greenkeeper-postpublish": "1.0.1",
-    "microtime": "2.1.2",
-    "mocha": "3.2.0",
+    "babel-preset-minify": "^0.2.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "benchmark": "^2.1.4",
+    "chai": "^4.1.2",
+    "codecov": "^2.3.0",
+    "commitizen": "^2.9.6",
+    "conventional-changelog": "^1.1.5",
+    "cross-env": "^5.0.5",
+    "cz-conventional-changelog": "^2.0.0",
+    "eslint": "^4.6.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-unicorn": "2.1.1",
+    "greenkeeper-postpublish": "^1.3.0",
+    "microtime": "^2.1.6",
+    "mocha": "^3.5.0",
     "mocha-junit-reporter": "1.13.0",
-    "mochawesome": "2.0.2",
-    "nodemon": "1.11.0",
-    "npm-check-updates": "2.8.9",
-    "nsp": "2.6.2",
-    "nyc": "10.1.2",
-    "rimraf": "2.5.4",
-    "standard-changelog": "0.0.1",
-    "standard-version": "4.0.0"
+    "mochawesome": "^2.3.0",
+    "nodemon": "^1.12.0",
+    "npm-check-updates": "^2.12.1",
+    "nsp": "^2.8.0",
+    "nyc": "^11.2.1",
+    "rimraf": "^2.6.1",
+    "standard-changelog": "^1.0.3",
+    "standard-version": "^4.2.0"
   },
   "dependencies": {},
-  "babel": {
-    "presets": [
-      "es2015-node6",
-      "stage-0",
-      "babili"
-    ]
-  },
   "eslintConfig": {
     "extends": "standard",
     "plugins": [
